# 100-lambs

./: .gitignore  1_lamb.argos  CMakeLists.txt  README.md  debug_lamb.argos  lambs.argos  lambs_messages.argos  lambs_messages_radio.argos  lambs_messages_range_and_bearing.argos
cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake
controllers/: CMakeLists.txt
controllers/footbot_diffusion/: footbot_diffusion.cpp  footbot_diffusion.h
controllers/footbot_lamb/: CMakeLists.txt  footbot_lamb.cpp  footbot_lamb.h  footbot_lamb_bt_nodes.cpp  nada.cpp
controllers/footbot_lamb_radio/: CMakeLists.txt  footbot_lamb.cpp  footbot_lamb.h
controllers/footbot_lamb_range_and_bearing/: CMakeLists.txt  footbot_lamb.cpp  footbot_lamb.h
controllers/galib_lamb/: CMakeLists.txt  galib_lamb.cpp  galib_lamb.h  galib_lamb_bt_nodes.cpp
controllers/lamb/: CMakeLists.txt  lamb.cpp  lamb.h  lamb_bt_nodes.cpp
embedding/galib/: CMakeLists.txt  main.cpp
experiments/: 50_lambs.argos  50_lambs_1.argos  diffusion_100.argos  galib_lamb.argos  lambs_diffusion.argos
loop_functions/: CMakeLists.txt
loop_functions/galib_lamb_loop_functions/: CMakeLists.txt  galib_lamb_loop_functions.cpp  galib_lamb_loop_functions.h
loop_functions/id_loop_functions/: id_qtuser_functions.cpp  id_qtuser_functions.h
loop_functions/lamb_loop_functions/: CMakeLists.txt  lamb_loop_functions.cpp  lamb_loop_functions.h  lamb_qtuser_functions.cpp
loop_functions/lamb_qtuser_functions/: CMakeLists.txt  lamb_qtuser_functions.cpp  lamb_qtuser_functions.h
loop_functions/paint_floor_loop_functions/: CMakeLists.txt  paint_floor_loop_functions.cpp  paint_floor_loop_functions.h
plugins/: CMakeLists.txt
plugins/robots/: CMakeLists.txt
plugins/robots/foot-bot/simulator/: footbot_entity.cpp  qtopengl_footbot.cpp
plugins/robots/lamb-bot/: CMakeLists.txt
plugins/robots/lamb-bot/control_interface/: ci_lambbot_base_ground_sensor.cpp  ci_lambbot_base_ground_sensor.h  ci_lambbot_distance_scanner_actuator.cpp  ci_lambbot_distance_scanner_actuator.h  ci_lambbot_distance_scanner_sensor.cpp  ci_lambbot_distance_scanner_sensor.h  ci_lambbot_encoder_sensor.cpp  ci_lambbot_encoder_sensor.h  ci_lambbot_gripper_actuator.cpp  ci_lambbot_gripper_actuator.h  ci_lambbot_light_sensor.cpp  ci_lambbot_light_sensor.h  ci_lambbot_motor_ground_sensor.cpp  ci_lambbot_motor_ground_sensor.h  ci_lambbot_proximity_sensor.cpp  ci_lambbot_proximity_sensor.h  ci_lambbot_turret_actuator.cpp  ci_lambbot_turret_actuator.h  ci_lambbot_turret_encoder_sensor.cpp  ci_lambbot_turret_encoder_sensor.h
plugins/robots/lamb-bot/simulator/: dynamics2d_lambbot_model.cpp  dynamics2d_lambbot_model.h  lambbot_base_ground_rotzonly_sensor.cpp  lambbot_base_ground_rotzonly_sensor.h  lambbot_distance_scanner_default_actuator.cpp  lambbot_distance_scanner_default_actuator.h  lambbot_distance_scanner_equipped_entity.cpp  lambbot_distance_scanner_equipped_entity.h  lambbot_distance_scanner_rotzonly_sensor.cpp  lambbot_distance_scanner_rotzonly_sensor.h  lambbot_entity.cpp  lambbot_entity.h  lambbot_gripper_default_actuator.cpp  lambbot_gripper_default_actuator.h  lambbot_light_rotzonly_sensor.cpp  lambbot_light_rotzonly_sensor.h  lambbot_motor_ground_rotzonly_sensor.cpp  lambbot_motor_ground_rotzonly_sensor.h  lambbot_proximity_default_sensor.cpp  lambbot_proximity_default_sensor.h  lambbot_turret_default_actuator.cpp  lambbot_turret_default_actuator.h  lambbot_turret_encoder_default_sensor.cpp  lambbot_turret_encoder_default_sensor.h  lambbot_turret_entity.cpp  lambbot_turret_entity.h  physx_lambbot_model.cpp  physx_lambbot_model.h  pointmass3d_lambbot_model.cpp  pointmass3d_lambbot_model.h  qtopengl_lambbot.cpp  qtopengl_lambbot.h
plugins/simulator/entities/: CMakeLists.txt  dynamics2d_trough_model.cpp  dynamics2d_trough_model.h  qtopengl_trough.cpp  qtopengl_trough.h  trough_entity.cpp  trough_entity.h
scripts/: geometry.py  geometry_test.py  log_analysis.py  periodo_medio.py  text_background.py  ui_test.py
scripts/geometry/: geometry.py
utility/: BrainTree.h
